Building the inventory Page
